--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
       <div class="bars_container" id="bars_container"></div>
 
       <div class="buttons_container">
-        <!-- <label for="slider">Array Size:</label> -->
+        <label for="slider">Number Of Bars: <output id="value"></output></label>
         <input
           type="range"
           id="slider"
-          min="50"
-          max="150"
+          min="10"
+          max="60"
           step="5"
-          value="50"
+          value="30"
         />
 
         <select name="" id="speed">
