--- a/index.html
+++ b/index.html
@@ -5,14 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,500&family=Ubuntu:wght@500&display=swap" rel="stylesheet">
     <title>Sorting Visualizer</title>
   </head>
   <body>
+    <h1 class="header">Sorting Visualizer</h1>
     <div class="container">
       <div class="bars_container" id="bars_container"></div>
 
       <div class="buttons_container">
-        <label for="slider">Number Of Bars: <output id="value"></output></label>
+        <label for="slider" id="label">Number Of Bars: <output id="value"></output></label>
         <input
           type="range"
           id="slider"
